PS-65: Fixed paddings, margins and sizes; Fixed large input group; Updated force dark mode config

--- a/web/src/assets/styles/core/_variables.scss
+++ b/web/src/assets/styles/core/_variables.scss
@@ -70,4 +70,8 @@ $form-invalid-border-color: #ea868f;
     // TODO: check all to remove unused
     --bs-secondary-bg: #343a40 !important;
     --bs-secondary-bg-rgb: 52, 58, 64 !important;
+    --bs-tertiary-color: rgba(173, 181, 189, 0.5) !important;
+    --bs-tertiary-color-rgb: 173, 181, 189 !important;
+    --bs-tertiary-bg: #2b3035 !important;
+    --bs-tertiary-bg-rgb: 43, 48, 53 !important;
 }
